tester/testsuite/bad/bad062.jl
int main() {
  boolean x = true;
  x--; // this should only work for int
  return 1;
}
